# Overcooked---A-Game-Project-for-CS202

./: CMakeLists.txt  README.md  bits.c  draft.cpp  main.cpp
assets/: MA_map2.glb  cabinet.glb  chef.glb  customer1.glb  customer2.glb  deco1.glb  dough.txt  dough2.txt  fridge.glb  girl.glb  kitchentable.glb  map3.glb  oniontomatobakeddough.glb  oven.glb  pepperonionionbakeddough.glb  wall.glb
resources/map/: crate.txt  crate_buns.txt  crate_carrots.txt  crate_cheese.txt  crate_hams.txt  crate_lattuce.txt  crate_onions.txt  crate_steak.txt  crate_tomatoes.txt
src/: Area.cpp  Button.cpp  ButtonIterator.cpp  CMakeLists.txt  CameraGame.cpp  Checker.cpp  CompositeString.cpp  ControllableObject.cpp  Controller.cpp  Cooker.cpp  Customer.cpp  CustomerDesire.cpp  CustomerFactory.cpp  CustomerHolder.cpp  DisplayFactory.cpp  DrawNumber.cpp  Food.cpp  FoodFactory.cpp  FoodIterator.cpp  GameAudio.cpp  GameInstruction.cpp  GameManager.cpp  KitchenHolder.cpp  Level.cpp  Manager.cpp  Map.cpp  Mediator.cpp  MediatorChecker.cpp  ModelFactory.cpp  Object.cpp  ObjectHolder.cpp  Particle.cpp  PauseGame.cpp  Screen.cpp  SharedResources.cpp  SpaceHolder.cpp  State.cpp  StorageHolder.cpp  Storer.cpp  Strategy.cpp  (+9 more)
src/include/: Area.hpp  Button.hpp  ButtonIterator.hpp  CameraGame.hpp  Checker.hpp  CompositeString.hpp  ControllableObject.hpp  Controller.hpp  Cooker.hpp  Customer.hpp  CustomerDesire.hpp  CustomerFactory.hpp  CustomerHolder.hpp  DisplayFactory.hpp  DrawNumber.hpp  Food.hpp  FoodFactory.hpp  FoodIterator.hpp  GameAudio.hpp  GameInstruction.hpp  GameManager.hpp  KitchenHolder.hpp  Level.hpp  Libraries.hpp  Manager.hpp  Map.hpp  Mediator.hpp  MediatorChecker.hpp  ModelFactory.hpp  Object.hpp  ObjectHolder.hpp  Particle.hpp  PauseGame.hpp  Screen.hpp  SharedResources.hpp  SpaceHolder.hpp  State.hpp  StorageHolder.hpp  Storer.hpp  Strategy.hpp  (+5 more)
